fixed margin padding for deposits page on mobile

--- a/styles/deposits-and-withdrawals.css
+++ b/styles/deposits-and-withdrawals.css
@@ -1191,6 +1191,11 @@ section h2 {
   max-width: 960px;
   width: 60%;
 }
+@media (max-width: 750px) {
+  #partnerSection {
+    padding-top: 2400px;
+  }
+}
 
 .partnerSection__title {
   font-size: 2.5em;
